<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_houseboat_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_equipment" />
        <item
            android:id="@+id/nav_species"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_species" />
        <item
            android:id="@+id/nav_knot_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_knot_menu" />
    </group>
</menu>