<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreditsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_cream_soda"
            android:padding="@dimen/med_margin"
            android:text="@string/icons"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/title_font" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@drawable/ic_reel" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_fishing" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_fishing_rod" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:padding="@dimen/med_margin"
            android:text="@string/freepik"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_font" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_fishing_baits" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="@dimen/med_margin"
            android:text="@string/lure_credit"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_font" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_knot" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="@dimen/med_margin"
            android:text="@string/knot_credit"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_font" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_cream_soda"
            android:padding="@dimen/med_margin"
            android:text="@string/images"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/title_font" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/header" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="@dimen/med_margin"
            android:text="@string/header_credit"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_font" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/clinch1" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="@dimen/med_margin"
            android:text="@string/knots_credit"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_font" />

    </LinearLayout>
</ScrollView>